--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon link -->
-    <!-- <link rel="shortcut icon" href="images/logo.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- fontawesome link -->
     <script src="https://kit.fontawesome.com/155f2fcde0.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
@@ -144,8 +144,9 @@
     </header>
 
     <main>
+
         <!-- featured bike section -->
-        <section class="container ">
+        <section class="container mb-5 pb-5">
             <!-- feature heading -->
             <div class="felx flex-column text-center mb-5">
                 <h1 class="text-center m-0">Fetured Bikes 2021</h1>
@@ -155,7 +156,7 @@
                 </div>
             </div>
             <!-- featured bikes -->
-            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mb-5 pb-5">
+            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 ">
                 <div class="col">
                     <div class="p-4 text-center">
                         <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
@@ -175,9 +176,11 @@
         </section>
 
         <!-- happy client section -->
-        <section class="container">
+        <section class="container mb-5 pb-5">
+            <!-- happy client heading -->
             <h1 class="text-center mb-5">Happy <span class="highlited-heading"> Clients says</span> </h1>
-            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mb-5 pb-5">
+            <!-- happy client content -->
+            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 ">
                 <div class="col">
                     <div class="card p-4">
                         <div>
@@ -257,8 +260,10 @@
         </section>
 
         <!-- faq section -->
-        <section class="container">
+        <section class="container mb-5 pb-5">
+            <!-- faq heading -->
             <h1 class="text-center mb-5">Frequently Asked <span class="highlited-heading">Questions</span> </h1>
+            <!-- faq  content-->
             <div class="row row-cols-lg-2 row-cols-1 g-4">
                 <div class="col">
                     <div>
@@ -350,7 +355,6 @@
                 </div>
             </div>
         </section>
-
 
     </main>
 
