--- a/index.html
+++ b/index.html
@@ -356,6 +356,56 @@
             </div>
         </section>
 
+        <!-- registration section -->
+        <section class="container mb-5 pb-5">
+            <h1 class="text-center mb-5">Registrater <span class="highlited-heading"> Your Partner!!!</span> </h1>
+            <div class="row row-cols-lg-2 row-cols-1 g-4">
+                <div class="col">
+                    <div>
+                        <h2>
+                            We offer you to register your CBR with us
+                            <span class="text-danger"> Be The king of the road ASAP.</span>
+                        </h2>
+                        <div>
+                            <div class="accordion " id="accordionExample1">
+                                <div class="accordion-item  border-0 mb-4">
+                                    <div class="border border-2 rounded-3">
+                                        <h2 class="accordion-header" id="headingOne">
+                                            <button class="accordion-button collapsed fs-5" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                                aria-expanded="true" aria-controls="collapseOne">
+                                                Why you need to register?
+                                            </button>
+                                        </h2>
+                                        <div id="collapseOne" class="accordion-collapse collapse show "
+                                            aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body text-black-50 ">
+                                                Get your bike security marked and registered at Bike Register . It's a
+                                                highly effective, visible deterrent to bike thieves. They know that if
+                                                they
+                                                are caught with a registered bike, the owner can be traced and they will
+                                                be
+                                                arrested.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+
+                        <img src="images/faq.png" alt="" width="100%">
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="images/faq.png" alt="" width="100%">
+                    </div>
+                </div>
+        </section>
+
     </main>
 
 
