--- a/index.html
+++ b/index.html
@@ -159,17 +159,18 @@
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 ">
                 <div class="col">
                     <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
+                        <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image">
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243">
+                        <img src="images/feature-bike.jpg" alt="" width="100%">
+                        <!-- <img src="images/feature-bike.jpg" alt="" width="288" height="243"> -->
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
+                        <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image">
                     </div>
                 </div>
             </div>
@@ -359,13 +360,19 @@
         <!-- registration section -->
         <section class="container mb-5 pb-5">
             <h1 class="text-center mb-5">Registrater <span class="highlited-heading"> Your Partner!!!</span> </h1>
-            <div class="row row-cols-lg-2 row-cols-1 g-4">
+            <div class="row row-cols-lg-2 row-cols-1 g-4 ">
                 <div class="col">
-                    <div>
-                        <h2>
-                            We offer you to register your CBR with us
-                            <span class="text-danger"> Be The king of the road ASAP.</span>
-                        </h2>
+                    <div class="d-flex flex-column justify-content-around">
+                        <div class="text-center">
+                            <h2>
+                                Register your CBR with us &
+                                <br>
+                                <span class="text-danger fw-bold"> Be The king of the road ASAP.</span>
+                            </h2>
+                        </div>
+                        <div class="my-4 shadow rounded-3">
+                            <img src="images/moto-race.png" alt="" width="100%" class="rounded-3 p-2 ">
+                        </div>
                         <div>
                             <div class="accordion " id="accordionExample1">
                                 <div class="accordion-item  border-0 mb-4">
@@ -394,14 +401,63 @@
 
                             </div>
                         </div>
-
-
-                        <img src="images/faq.png" alt="" width="100%">
                     </div>
                 </div>
                 <div class="col">
-                    <div>
-                        <img src="images/faq.png" alt="" width="100%">
+                    <div class=" shadow-lg rounded-3 p-4 header-bg">
+                        <h2 class="text-center pb-4 text-white">Registration Form</h2>
+                        <form action="">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="floatingName" placeholder="Enter your name">
+                                <label for="floatingName">Name</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="telephone" class="form-control" id="floatingPhone"
+                                    placeholder="Enter Phone Number">
+                                <label for="floatingPhone">Phone</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control" id="floatingInput"
+                                    placeholder="name@example.com">
+                                <label for="floatingInput">Email address</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="floatingInvoice"
+                                    placeholder="Enter your invoice number">
+                                <label for="floatingInvoice">Invoice Number</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="date" class="form-control" id="dateInput"
+                                    placeholder="Enter your invoice number">
+                                <label for="dateInput">Date of Purchase</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input class="form-control" list="datalistOptions" id="locationInput"
+                                    placeholder="Enter Your Location" type="text">
+                                <label for="locationInput">Location</label>
+                                <datalist id="datalistOptions">
+                                    <option value="Dhaka">
+                                    <option value="Chittagong">
+                                    <option value="Rajshahi">
+                                    <option value="Khulna">
+                                    <option value="Sylhet">
+                                    <option value="Barisal">
+                                </datalist>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"
+                                        checked>
+                                    <label class="form-check-label text-white" for="flexCheckChecked">
+                                        I accept to the terms
+                                    </label>
+                                </div>
+                            </div>
+                            <div>
+                                <button class="btn button-style text-white form-control " type="submit"> Submit
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
         </section>
