--- a/index.html
+++ b/index.html
@@ -359,16 +359,16 @@
 
         <!-- registration section -->
         <section class="container mb-5 pb-5">
-            <h1 class="text-center mb-5">Registrater <span class="highlited-heading"> Your Partner!!!</span> </h1>
+            <h1 class="text-center mb-5">Register <span class="highlited-heading"> Your Ride Partner!!!</span> </h1>
             <div class="row row-cols-lg-2 row-cols-1 g-4 ">
                 <div class="col">
                     <div class="d-flex flex-column justify-content-around">
                         <div class="text-center">
-                            <h2>
+                            <h3>
                                 Register your CBR with us &
                                 <br>
                                 <span class="text-danger fw-bold"> Be The king of the road ASAP.</span>
-                            </h2>
+                            </h3>
                         </div>
                         <div class="my-4 shadow rounded-3">
                             <img src="images/moto-race.png" alt="" width="100%" class="rounded-3 p-2 ">
@@ -377,15 +377,15 @@
                             <div class="accordion " id="accordionExample1">
                                 <div class="accordion-item  border-0 mb-4">
                                     <div class="border border-2 rounded-3">
-                                        <h2 class="accordion-header" id="headingOne">
+                                        <h2 class="accordion-header" id="headingWhy">
                                             <button class="accordion-button collapsed fs-5" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                                                aria-expanded="true" aria-controls="collapseOne">
+                                                data-bs-toggle="collapse" data-bs-target="#collapseWhy"
+                                                aria-expanded="false" aria-controls="collapseWhy">
                                                 Why you need to register?
                                             </button>
                                         </h2>
-                                        <div id="collapseOne" class="accordion-collapse collapse show "
-                                            aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div id="collapseWhy" class="accordion-collapse collapse "
+                                            aria-labelledby="headingWhy" data-bs-parent="#accordionExample">
                                             <div class="accordion-body text-black-50 ">
                                                 Get your bike security marked and registered at Bike Register . It's a
                                                 highly effective, visible deterrent to bike thieves. They know that if
@@ -404,7 +404,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" shadow-lg rounded-3 p-4 header-bg">
+                    <div class=" shadow-lg rounded-3 p-4 header-bg ">
                         <h2 class="text-center pb-4 text-white">Registration Form</h2>
                         <form action="">
                             <div class="form-floating mb-3">
@@ -460,6 +460,84 @@
                         </form>
                     </div>
                 </div>
+        </section>
+
+        <!-- services section -->
+        <section class="container mb-5 pb-5">
+            <h1 class="text-center mb-5">Our services </h1>
+            <div class="row row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-1 align-items-center g-4">
+                <div class="col order-lg-1 order-md-1  order-sm-2 order-2">
+                    <div class="row row-cols-1 g-3">
+                        <div class="col">
+                            <div
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                <div>
+                                    <i class="fas fa-tools icon-font"></i>
+                                </div>
+                                <div class="ps-md-4 pt-3 pt-md-0">
+                                    <h2>2 Year Free Servicing</h2>
+                                    <p>
+                                        When You are the king of the road,
+                                        You must service your bike.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                <div>
+                                    <i class="fas fa-exchange-alt icon-font"></i>
+                                </div>
+                                <div class="ps-md-4 pt-3 pt-md-0">
+                                    <h2>One month Replacement</h2>
+                                    <p>
+                                        We will replace your bike and give you a new one if you
+                                        find any problem in Our bike.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                <div>
+                                    <i class="fas fa-headset icon-font"></i>
+                                </div>
+                                <div class="ps-md-4 pt-3 pt-md-0">
+                                    <h2>Contact With Us</h2>
+                                    <p>
+                                        Our so active support team is always ready to help you.
+                                        Feel free to contact.
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col order-lg-2 order-md-2 order-sm-1 order-1">
+                    <div id="carouselExampleControls" class="carousel slide bg-custom rounded-3 my-5 "
+                        data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class=" carousel-item active">
+                                <img src="images/bike-1.png" class=" d-block w-100" alt="...">
+                            </div>
+                            <div class=" carousel-item ">
+                                <img src="images/bike-2.png" class=" d-block w-100" alt="...">
+                            </div>
+                            <div class=" carousel-item ">
+                                <img src="images/bike-3.png" class=" d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- <div>
+                        <img src="images/shopping.png" width="100%" alt="">
+                    </div> -->
+                </div>
+            </div>
         </section>
 
     </main>
