responsive til 300px

--- a/index.html
+++ b/index.html
@@ -158,19 +158,21 @@
             <!-- featured bikes -->
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 ">
                 <div class="col">
-                    <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image">
+                    <div class=" text-center">
+                        <!-- <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image"> -->
+                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
                     </div>
                 </div>
                 <div class="col">
-                    <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="100%">
-                        <!-- <img src="images/feature-bike.jpg" alt="" width="288" height="243"> -->
+                    <div class="  text-center">
+                        <!-- <img src="images/feature-bike.jpg" alt="" width="100%"> -->
+                        <img src="images/feature-bike.jpg" alt="" width="288" height="243">
                     </div>
                 </div>
                 <div class="col">
-                    <div class="p-4 text-center">
-                        <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image">
+                    <div class="  text-center">
+                        <!-- <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image"> -->
+                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
                     </div>
                 </div>
             </div>
@@ -464,7 +466,7 @@
 
         <!-- services section -->
         <section class="container mb-5 pb-5">
-            <h1 class="text-center mb-5">Our services </h1>
+            <h1 class="text-center mb-4">Our services </h1>
             <div class="row row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-1 align-items-center g-4">
                 <div class="col order-lg-1 order-md-1  order-sm-2 order-2">
                     <div class="row row-cols-1 g-3">
