--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item px-3">
-                                <a class="nav-link" href="#">Shop</a>
+                                <a class="nav-link" href="#service-section">Service</a>
                             </li>
                             <li class="nav-item px-3">
-                                <a class="nav-link" href="#">News</a>
+                                <a class="nav-link" href="#news-section">News</a>
                             </li>
                             <li class="nav-item px-3">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="#register-section">Register</a>
                             </li>
                             <li class="nav-item ps-3">
                                 <button class="btn button-style text-white" type="submit">Log In</button>
@@ -50,7 +50,7 @@
             </nav>
         </section>
 
-        <!-- banner section -->
+        <!-- banner section   -->
         <section class=" container my-5 pb-5 ">
             <div class="row  g-0 align-items-center justify-content-between p-3 p-sm-0 ">
                 <div class="col-lg-6 col-md-6 col-sm-11 col-12">
@@ -81,7 +81,7 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <!-- color -->
+                                        <!-- color radio -->
                                         <div class="mb-3">
                                             <label class="form-label">Your Favorite Color:</label>
                                             <br>
@@ -107,7 +107,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <!-- model -->
+                                        <!-- model select -->
                                         <div class="mb-3">
                                             <select class="form-select form-select mb-3"
                                                 aria-label=".form-select-lg example">
@@ -123,10 +123,15 @@
                                                 placeholder="Write something about your desired CBR"></textarea>
                                         </div>
                                     </div>
-                                    <div class="modal-footer">
+                                    <div class="modal-footer border-0 pt-0">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn button-style text-white">Payment</button>
+                                        <button type="button" class="btn button-style">
+                                            <a href="https://www.bkash.com/" class="text-white text-decoration-none"
+                                                target="_blank">
+                                                Payment
+                                            </a>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +154,7 @@
         <section class="container mb-5 pb-5">
             <!-- feature heading -->
             <div class="felx flex-column text-center mb-5">
-                <h1 class="text-center m-0">Fetured Bikes 2021</h1>
+                <h1 class="text-center m-0 fw-bold">Fetured Bikes 2021</h1>
                 <div class="d-inline-block">
                     <p class="text-center text-danger m-0">Best bike collection</p>
                     <hr class="w-50 mx-auto my-0 text-danger" style="height: 2px;">
@@ -181,7 +186,7 @@
         <!-- happy client section -->
         <section class="container mb-5 pb-5">
             <!-- happy client heading -->
-            <h1 class="text-center mb-5">Happy <span class="highlited-heading"> Clients says</span> </h1>
+            <h1 class="text-center mb-5 fw-bold">Happy <span class="highlited-heading"> Clients says</span> </h1>
             <!-- happy client content -->
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 ">
                 <div class="col">
@@ -262,10 +267,86 @@
             </div>
         </section>
 
+        <!-- latest news section -->
+        <section class="container mb-5 pb-5" id="news-section">
+            <!-- latest news heading -->
+            <h1 class="text-center mb-5 fw-bold">Latest News</span> </h1>
+            <!-- latest news content -->
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                The new XDiavel Black Star version embodies the sports side of the Ducati cruiser, with
+                                a livery and equipment inspired by the world of sports cars. The exclusive livery
+                                alternates matt grey and black with inevitable touches of red.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-2.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Motorcycles & Scooters</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                Reassuring customers facing restricted movement in several states, the company said it
+                                will support them to avail these services at their convenience at a later date before
+                                July 31, 2021, as lockdown eases.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-3.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title fw-bold">2021 Honda CBR500R</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                Is it any wonder why the Honda CBR500R is one of our most popular sportbikes? It just
+                                gets so many things right. Price. Power. Weight. Handling. Its twin-cylinder engine revs
+                                freely and produces plenty of torque, and it lets us keep the bike narrow and nimble
+                                too.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+
         <!-- faq section -->
         <section class="container mb-5 pb-5">
             <!-- faq heading -->
-            <h1 class="text-center mb-5">Frequently Asked <span class="highlited-heading">Questions</span> </h1>
+            <h1 class="text-center mb-5 fw-bold">Frequently Asked <span class="highlited-heading">Questions</span> </h1>
             <!-- faq  content-->
             <div class="row row-cols-lg-2 row-cols-1 g-4">
                 <div class="col">
@@ -360,13 +441,14 @@
         </section>
 
         <!-- registration section -->
-        <section class="container mb-5 pb-5">
-            <h1 class="text-center mb-5">Register <span class="highlited-heading"> Your Ride Partner!!!</span> </h1>
+        <section class="container mb-5 pb-5" id="register-section">
+            <h1 class="text-center mb-5 fw-bold">Register <span class="highlited-heading"> Your Ride Partner!!!</span>
+            </h1>
             <div class="row row-cols-lg-2 row-cols-1 g-4 ">
                 <div class="col">
                     <div class="d-flex flex-column justify-content-around">
                         <div class="text-center">
-                            <h3>
+                            <h3 class="m-0">
                                 Register your CBR with us &
                                 <br>
                                 <span class="text-danger fw-bold"> Be The king of the road ASAP.</span>
@@ -428,6 +510,16 @@
                                     placeholder="Enter your invoice number">
                                 <label for="floatingInvoice">Invoice Number</label>
                             </div>
+                            <div class=" form-floating mb-3">
+                                <select class="form-select form-select mb-3" id="floatingmodel"
+                                    aria-label=".form-select-lg example">
+                                    <option selected>Select what you Bought</option>
+                                    <option value="1">CBR300R (Single-cylinder)</option>
+                                    <option value="2">CBR500R (Inline-twin)</option>
+                                    <option value="3">CBR1000RR-R Fireblade (Inline-four)</option>
+                                </select>
+                                <label for="floatingmodel">Your CBR Model No.</label>
+                            </div>
                             <div class="form-floating mb-3">
                                 <input type="date" class="form-control" id="dateInput"
                                     placeholder="Enter your invoice number">
@@ -455,6 +547,7 @@
                                     </label>
                                 </div>
                             </div>
+
                             <div>
                                 <button class="btn button-style text-white form-control " type="submit"> Submit
                                 </button>
@@ -465,8 +558,8 @@
         </section>
 
         <!-- services section -->
-        <section class="container mb-5 pb-5">
-            <h1 class="text-center mb-4">Our services </h1>
+        <section class="container mb-5 pb-5" id="service-section">
+            <h1 class="text-center mb-4 fw-bold">Our Services </h1>
             <div class="row row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-1 align-items-center g-4">
                 <div class="col order-lg-1 order-md-1  order-sm-2 order-2">
                     <div class="row row-cols-1 g-3">
