--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <div class="">
                             <button class="btn button-style"><a
                                     href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white">Read More</a>
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
                             </button>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                         <div class="">
                             <button class="btn button-style"><a
                                     href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white">Read More</a>
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
                             </button>
                         </div>
                     </div>
@@ -332,7 +332,7 @@
                         <div class="">
                             <button class="btn button-style"><a
                                     href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white">Read More</a>
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
                             </button>
                         </div>
                     </div>
@@ -340,8 +340,6 @@
 
             </div>
         </section>
-
-
 
         <!-- faq section -->
         <section class="container mb-5 pb-5">
@@ -637,9 +635,8 @@
 
     </main>
 
-
-    <footer>
-
+    <footer class="bg-footer py-3">
+        <p class="m-0 text-center text-light">© 2021 bike. All rights reserved</p>
     </footer>
     <!-- Bootstrap Js -->
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
