some hover effect added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                         </p>
-                        <button class="btn button-style text-white px-4 py-2" data-bs-toggle="modal"
+                        <button class="btn button-style text-white px-5 py-2" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             Purchase
                         </button>
@@ -183,6 +183,80 @@
             </div>
         </section>
 
+        <!-- latest news section -->
+        <section class="container mb-5 pb-5" id="news-section">
+            <!-- latest news heading -->
+            <h1 class="text-center mb-5 fw-bold">Latest News</span> </h1>
+            <!-- latest news content -->
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                The new XDiavel Black Star version embodies the sports side of the Ducati cruiser, with
+                                a livery and equipment inspired by the world of sports cars. The exclusive livery
+                                alternates matt grey and black with inevitable touches of red.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-2.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Motorcycles & Scooters</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                Reassuring customers facing restricted movement in several states, the company said it
+                                will support them to avail these services at their convenience at a later date before
+                                July 31, 2021, as lockdown eases.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 p-3 p-sm-4">
+                        <div class="mb-2">
+                            <img src="images/bike-3.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title fw-bold">2021 Honda CBR500R</h5>
+                            <p class="card-text text-black-50  text-justify">
+                                Is it any wonder why the Honda CBR500R is one of our most popular sportbikes? It just
+                                gets so many things right. Price. Power. Weight. Handling. Its twin-cylinder engine revs
+                                freely and produces plenty of torque, and it lets us keep the bike narrow and nimble
+                                too.
+                            </p>
+                        </div>
+                        <div class="">
+                            <button class="btn button-style"><a
+                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
+                                    class="text-decoration-none text-white" target="_blank">Read More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <!-- happy client section -->
         <section class="container mb-5 pb-5">
             <!-- happy client heading -->
@@ -264,80 +338,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- latest news section -->
-        <section class="container mb-5 pb-5" id="news-section">
-            <!-- latest news heading -->
-            <h1 class="text-center mb-5 fw-bold">Latest News</span> </h1>
-            <!-- latest news content -->
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <div class="col">
-                    <div class="card h-100 p-3 p-sm-4">
-                        <div class="mb-2">
-                            <img src="images/bike-1.png" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title">Ducati XDIAVEL S-73</h5>
-                            <p class="card-text text-black-50  text-justify">
-                                The new XDiavel Black Star version embodies the sports side of the Ducati cruiser, with
-                                a livery and equipment inspired by the world of sports cars. The exclusive livery
-                                alternates matt grey and black with inevitable touches of red.
-                            </p>
-                        </div>
-                        <div class="">
-                            <button class="btn button-style"><a
-                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white" target="_blank">Read More</a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100 p-3 p-sm-4">
-                        <div class="mb-2">
-                            <img src="images/bike-2.png" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title">Motorcycles & Scooters</h5>
-                            <p class="card-text text-black-50  text-justify">
-                                Reassuring customers facing restricted movement in several states, the company said it
-                                will support them to avail these services at their convenience at a later date before
-                                July 31, 2021, as lockdown eases.
-                            </p>
-                        </div>
-                        <div class="">
-                            <button class="btn button-style"><a
-                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white" target="_blank">Read More</a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100 p-3 p-sm-4">
-                        <div class="mb-2">
-                            <img src="images/bike-3.png" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title fw-bold">2021 Honda CBR500R</h5>
-                            <p class="card-text text-black-50  text-justify">
-                                Is it any wonder why the Honda CBR500R is one of our most popular sportbikes? It just
-                                gets so many things right. Price. Power. Weight. Handling. Its twin-cylinder engine revs
-                                freely and produces plenty of torque, and it lets us keep the bike narrow and nimble
-                                too.
-                            </p>
-                        </div>
-                        <div class="">
-                            <button class="btn button-style"><a
-                                    href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white" target="_blank">Read More</a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </section>
 
@@ -563,7 +563,7 @@
                     <div class="row row-cols-1 g-3">
                         <div class="col">
                             <div
-                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center service-element">
                                 <div>
                                     <i class="fas fa-tools icon-font"></i>
                                 </div>
@@ -578,7 +578,7 @@
                         </div>
                         <div class="col">
                             <div
-                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center service-element">
                                 <div>
                                     <i class="fas fa-exchange-alt icon-font"></i>
                                 </div>
@@ -593,7 +593,7 @@
                         </div>
                         <div class="col">
                             <div
-                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center">
+                                class="d-flex flex-md-row flex-sm-column flex-column shadow rounded p-3 align-items-center service-element">
                                 <div>
                                     <i class="fas fa-headset icon-font"></i>
                                 </div>
