--- a/index.html
+++ b/index.html
@@ -623,12 +623,17 @@
                                 <img src="images/bike-3.png" class=" d-block w-100" alt="...">
                             </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-
-                    <!-- <div>
-                        <img src="images/shopping.png" width="100%" alt="">
-                    </div> -->
                 </div>
             </div>
         </section>
