solved width issue by giving,  mw-100 = max-width:100%

--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@
                 <div class="col">
                     <div class=" text-center">
                         <!-- <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image"> -->
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
+                        <img src="images/feature-bike.jpg" alt="" width="288" class="gray-image mw-100">
                     </div>
                 </div>
                 <div class="col">
                     <div class="  text-center">
                         <!-- <img src="images/feature-bike.jpg" alt="" width="100%"> -->
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243">
+                        <img src="images/feature-bike.jpg" alt="" width="288" class=" mw-100">
                     </div>
                 </div>
                 <div class="col">
                     <div class="  text-center">
                         <!-- <img src="images/feature-bike.jpg" alt="" width="100%" class="gray-image"> -->
-                        <img src="images/feature-bike.jpg" alt="" width="288" height="243" class="gray-image">
+                        <img src="images/feature-bike.jpg" alt="" width="288" class="gray-image mw-100">
                     </div>
                 </div>
             </div>
