img border added

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <div class="col">
                     <div class="card p-4">
                         <div>
-                            <img src="images/user-1.png" class=" d-block mx-auto" alt="..." width="150px"
+                            <img src="images/user-1.png" class=" d-block mx-auto " alt="..." width="150px"
                                 height="150px">
                         </div>
                         <div class="card-body text-center pt-4 p-0">
@@ -317,8 +317,8 @@
                 <div class="col">
                     <div class="card p-4">
                         <div>
-                            <img src="images/user-3.jpg" class="rounded-circle d-block mx-auto" alt="person 3"
-                                width="150px" height="150px">
+                            <img src="images/user-3.jpg" class="rounded-circle d-block mx-auto client-img"
+                                alt="person 3" width="150px" height="150px">
                         </div>
                         <div class="card-body text-center pt-4 p-0">
                             <p class="card-text  m-0">
