Hover effect on button

--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                             </p>
                         </div>
                         <div class="">
-                            <button class="btn button-style"><a
+                            <button class="btn outline-button-style"><a
                                     href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white" target="_blank">Read More</a>
+                                    class="text-decoration-none text-reset" target="_blank">Read More</a>
                             </button>
                         </div>
                     </div>
@@ -247,9 +247,9 @@
                             </p>
                         </div>
                         <div class="">
-                            <button class="btn button-style"><a
+                            <button class="btn outline-button-style"><a
                                     href="https://www.ducati.com/ww/en/bikes/xdiavel/xdiavel"
-                                    class="text-decoration-none text-white" target="_blank">Read More</a>
+                                    class="text-decoration-none text-reset" target="_blank">Read More</a>
                             </button>
                         </div>
                     </div>
