padding with break point

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                         </p>
-                        <button class="btn button-style text-white px-5 py-2" data-bs-toggle="modal"
+                        <button class="btn button-style text-white  px-sm-5 py-sm-2" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             Purchase
                         </button>
@@ -266,7 +266,7 @@
                 <div class="col">
                     <div class="card p-4">
                         <div>
-                            <img src="images/user-1.png" class=" d-block mx-auto " alt="..." width="150px"
+                            <img src="images/user-1.png" class=" d-block mx-auto mw-100" alt="..." width="150px"
                                 height="150px">
                         </div>
                         <div class="card-body text-center pt-4 p-0">
@@ -291,7 +291,7 @@
                 <div class="col">
                     <div class="card p-4">
                         <div>
-                            <img src="images/user-2.png" class=" d-block mx-auto" alt="..." width="150px"
+                            <img src="images/user-2.png" class=" d-block mx-auto mw-100" alt="..." width="150px"
                                 height="150px">
                         </div>
                         <div class="card-body text-center pt-4 p-0">
@@ -316,7 +316,7 @@
                 <div class="col">
                     <div class="card p-4">
                         <div>
-                            <img src="images/user-3.jpg" class="rounded-circle d-block mx-auto client-img"
+                            <img src="images/user-3.jpg" class="rounded-circle d-block mx-auto client-img mw-100"
                                 alt="person 3" width="150px" height="150px">
                         </div>
                         <div class="card-body text-center pt-4 p-0">
@@ -486,8 +486,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" shadow-lg rounded-3 p-4 header-bg ">
-                        <h2 class="text-center pb-4 text-white">Registration Form</h2>
+                    <div class=" shadow-lg rounded-3 p-3 p-sm-4 header-bg ">
+                        <h3 class="text-center pb-4 text-white">Registration Form</h3>
                         <form action="">
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" id="floatingName" placeholder="Enter your name">
