padding with break point

--- a/index.html
+++ b/index.html
@@ -545,7 +545,6 @@
                                     </label>
                                 </div>
                             </div>
-
                             <div>
                                 <button class="btn button-style text-white form-control " type="submit"> Submit
                                 </button>
@@ -553,6 +552,7 @@
                         </form>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- services section -->
