--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- latest news section -->
         <section class="container mb-5 pb-5" id="news-section">
             <!-- latest news heading -->
-            <h1 class="text-center mb-5 fw-bold">Latest News</span> </h1>
+            <h1 class="text-center mb-5 fw-bold">Latest News </h1>
             <!-- latest news content -->
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
